J17 (#42)
* switched to java 17, nitrite removed, tinylog v2 instead v1

* maven workflow updated?